--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -94,7 +94,7 @@
 
 .infoColumn > p {
   font-size: 16px;
-  line-height: 1.8;
+  line-height: 1.4;
   margin-bottom: 10px;
 }
 
@@ -128,6 +128,9 @@
   font-size: 16px;
   font-weight: 700;
   margin-bottom: 4px;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
+  letter-spacing: 0 !important;
+  text-transform: none !important;
 }
 
 .infoDetails p {
